remove 'military-grade' from index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thimble - Military-Grade Messaging Platform</title>
+    <title>Thimble Messaging Platform</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,7 +64,7 @@
     </header>
 
     <div class="container">
-        <h2>Your Military-Grade Messaging Platform</h2>
+        <h2>Your Messaging Platform</h2>
         <p>Access secure communication channels and monitor activity with our state-of-the-art platform.</p>
         
         <div class="button-container">
