improve system status report and link from home page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="button-container">
             <a href="/log.html" class="button">Audit Log</a>
             <a href="/chat.html" class="button">Chat Application</a>
-            <a href="/forum.html" class="button">Forum</a>
+            <a href="/system.html" class="button">System Status</a>
         </div>
     </div>
 </body>
